--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
 
               <!-- button download android app -->
               <a href="https://blogger.keynate.com/" target="_blank" type="button" class="btn btn-success"
-                style="background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); color: white; border: 0px !important;">Download
+                style="background: linear-gradient(-45deg, red 0%, yellow 100%); color: white; border: 0px !important;">Download
                 <i class="fa-solid fa-cloud-arrow-down"></i></a>
 
             </div>
@@ -987,12 +987,12 @@
               <div class="card"
               style="display: flex; justify-content: center; align-items: center; flex-direction: column;">
               <p class="heading" style="color: wheat; text-align: center;">
-                iPhone Or MackBook App
+                iPhone Or MacBook App
               </p>
 
               <!-- button download android app -->
               <a href="https://blogger.keynate.com/" target="_blank" type="button" class="btn btn-success"
-                style="background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); color: white; border: 0px !important;">Download
+                style="background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%); color: white; border: 0px !important;">Download
                 <i class="fa-solid fa-cloud-arrow-down"></i></a>
 
             </div>
@@ -1013,7 +1013,7 @@
 
               <!-- button download android app -->
               <a href="https://blogger.keynate.com/" target="_blank" type="button" class="btn btn-success"
-                style="background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); color: white; border: 0px !important;">Download
+                style="background: linear-gradient(-45deg, #cc208e 0%, #6713d2 100%); color: white; border: 0px !important;">Download
                 <i class="fa-solid fa-cloud-arrow-down"></i></a>
 
             </div>
