--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
 
 
-
+<!-- 
   <div id="carouselExampleAutoplaying" data-bs-ride="carousel" class="carousel slide">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide-to="0" class="active"
@@ -94,6 +94,56 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+ -->
+
+ <div style="min-height: 60vh; overflow: hidden;">
+  <div class="grid">
+    <div class="row" style="display: flex; justify-content: center; align-items: center;">
+     
+      <div class="col-12 col-xl-6 col-lg-6 col-md-6 p-2">
+        <!-- Video :- assets/blog.mp4 -->
+        <video width="100%" height="100%" autoplay loop>
+          <source src="./assets/blog.mp4" type="video/mp4">
+        </video>
+
+      </div>
+
+      <div class="col-12 col-xl-6 col-lg-6 col-md-6 p-2" style="display: flex; justify-content: center; align-items: center; text-align: center; flex-direction: column;">
+
+        <h2 class="order_title mb-0">
+           Blog website development
+        </h2>
+        <p style="width: 80%; color: rgb(92, 92, 92);">
+          Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration
+        </p>
+        <h2 style="display: flex; flex-direction: column;">
+          <div style="position: relative; display: inline-block;">
+            <span style="color: #188f00; position: relative; top: -10px; font-size: smaller;">₹</span>
+            <span style="color: #188f00; font-size: larger;">7,500</span>
+          </div>
+          <div>
+            <strike style="color: rgb(59, 59, 59);">
+              <span style="color: rgb(59, 59, 59);">₹25,000</span>
+            </strike>
+          </div>
+        </h2>
+        
+
+        <div style="flex-direction: row; margin-top: 10px;">
+          <a href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer." class="button" style=" text-decoration: none; background-color: #188f00; color: white; padding: 10px; padding-left: 20px; padding-right: 20px; border-radius: 24px;">
+            Order Now
+          </a>
+          <a href="https://blogger.keynate.com/" target="_blank" class="button" style="margin-left: 10px; text-decoration: none; background-color: #3F3F3F; color: white; padding: 10px; padding-left: 20px; padding-right: 20px; border-radius: 24px;">
+            See Demo
+          </a>
+        </div>
+ 
+       </div>
+
+    </div>
+  </div>
+ </div>
+
 
   <hr style="width: 100%;">
 
@@ -1043,7 +1093,7 @@
     href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer.">
     <nav class="navbar fixed-bottom" style="background-color: #25D366;">
       <div style="display: flex; justify-content: center; align-items: center; text-align: center; width: 100%;">
-        <h2>Learn more</h2> <i class="fa-solid fa-arrow-right" style="margin-left: 5px;"></i>
+        <h4>Order Now</h4> <i class="fa-solid fa-arrow-right" style="margin-left: 5px;"></i>
       </div>
     </nav>
   </a>
