--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
      
       <div class="col-12 col-xl-6 col-lg-6 col-md-6 p-2">
         <!-- Video :- assets/blog.mp4 -->
-        <video width="100%" height="100%" autoplay loop>
+        <video width="100%" height="100%" autoplay muted loop>
           <source src="https://bhartikumari.s3.ap-south-1.amazonaws.com/1729538176799_88667aa7-abbd-4e97-98b9-7f5ce52a912b.mp4" type="video/mp4">
         </video>
 
