--- a/index.html
+++ b/index.html
@@ -97,14 +97,15 @@
  -->
 
  <div style="min-height: 60vh; overflow: hidden;">
-  <div class="grid">
+  <div class="grid"  style="margin-top: 30px; margin-bottom: 50px;">
     <div class="row" style="display: flex; justify-content: center; align-items: center;">
      
       <div class="col-12 col-xl-6 col-lg-6 col-md-6 p-2">
         <!-- Video :- assets/blog.mp4 -->
-        <video width="100%" height="100%" autoplay muted loop>
+        <!-- <video width="100%" height="100%" autoplay muted loop>
           <source src="https://bhartikumari.s3.ap-south-1.amazonaws.com/1729538176799_88667aa7-abbd-4e97-98b9-7f5ce52a912b.mp4" type="video/mp4">
-        </video>
+        </video> -->
+        <img src="./assets/blog_website_demo.png" style="width: 100%; height: auto;" alt="" srcset="">
 
       </div>
 
@@ -164,112 +165,7 @@
     <div class="grid p-3">
       <div class="row">
 
-        <!-- Latest NEWS -->
-        <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
-          <div class="plan">
-            <div class="inner">
-              <p class="title">
-                <i class="fa-solid fa-newspaper"></i>
-                Latest News
-              </p>
-              <p class="info">Stay updated with the most recent developments and trending stories in your niche. Our
-                latest news section provides timely insights and information that keep you informed and engaged.</p>
-
-              <ul class="features">
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Real-time news updates</strong></span>
-
-                </li>
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Coverage of trending topics</strong></span>
-
-                </li>
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Expert commentary and analysis</strong></span>
-
-                </li>
-              </ul>
-              <div class="action">
-                <a class="button" href="#">
-                  See Demo
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Affiliated Marketing -->
-        <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
-          <div class="plan">
-            <div class="inner">
-              <p class="title">
-                <i class="fa-solid fa-handshake"></i>
-                Affiliate Marketing
-              </p>
-              <p class="info">Perfect for individuals or teams focused on promoting products and earning commissions
-                through
-                partnerships. Maximize your affiliate campaigns with advanced tools and resources.</p>
-              <ul class="features">
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Easy product reviews</strong></span>
-                </li>
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Customizable review templates</strong></span>
-                </li>
-                <li>
-                  <span class="icon">
-                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M0 0h24v24H0z" fill="none"></path>
-                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
-                      </path>
-                    </svg>
-                  </span>
-                  <span><strong>Affiliate link management</strong></span>
-                </li>
-              </ul>
-              <div class="action">
-                <a class="button" href="#">
-                  See Demo
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
+      
 
         <!-- Youtuber -->
         <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
@@ -319,7 +215,7 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/maximize-your-brands-potential-with-youtube-influencers" target="_blank">
                   See Demo
                 </a>
               </div>
@@ -375,13 +271,67 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/unlocking-the-power-of-instagram-influencers-boost-your-brand" target="_blank">
                   See Demo
                 </a>
               </div>
             </div>
           </div>
         </div>
+
+
+        <!-- Affiliated Marketing -->
+        <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
+          <div class="plan">
+            <div class="inner">
+              <p class="title">
+                <i class="fa-solid fa-handshake"></i>
+                Affiliate Marketing
+              </p>
+              <p class="info">Perfect for individuals or teams focused on promoting products and earning commissions
+                through
+                partnerships. Maximize your affiliate campaigns with advanced tools and resources.</p>
+              <ul class="features">
+                <li>
+                  <span class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                      </path>
+                    </svg>
+                  </span>
+                  <span><strong>Easy product reviews</strong></span>
+                </li>
+                <li>
+                  <span class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                      </path>
+                    </svg>
+                  </span>
+                  <span><strong>Customizable review templates</strong></span>
+                </li>
+                <li>
+                  <span class="icon">
+                    <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0h24v24H0z" fill="none"></path>
+                      <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                      </path>
+                    </svg>
+                  </span>
+                  <span><strong>Affiliate link management</strong></span>
+                </li>
+              </ul>
+              <div class="action">
+                <a class="button" href="https://blogger.keynate.com/unbeatable-onseason-offers-on-amazon-save-big-today" target="_blank">
+                  See Demo
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
 
         <!-- Facebook Influncer -->
         <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
@@ -432,7 +382,7 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/the-rise-of-facebook-influencers-engage-your-audience" target="_blank">
                   See Demo
                 </a>
               </div>
@@ -489,13 +439,68 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/harness-the-power-of-twitter-influencers-for-your-brand" target="_blank">
                   See Demo
                 </a>
               </div>
             </div>
           </div>
         </div>
+
+          <!-- Latest NEWS -->
+          <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
+            <div class="plan">
+              <div class="inner">
+                <p class="title">
+                  <i class="fa-solid fa-newspaper"></i>
+                  Latest News
+                </p>
+                <p class="info">Stay updated with the most recent developments and trending stories in your niche. Our
+                  latest news section provides timely insights and information that keep you informed and engaged.</p>
+  
+                <ul class="features">
+                  <li>
+                    <span class="icon">
+                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                        </path>
+                      </svg>
+                    </span>
+                    <span><strong>Real-time news updates</strong></span>
+  
+                  </li>
+                  <li>
+                    <span class="icon">
+                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                        </path>
+                      </svg>
+                    </span>
+                    <span><strong>Coverage of trending topics</strong></span>
+  
+                  </li>
+                  <li>
+                    <span class="icon">
+                      <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 0h24v24H0z" fill="none"></path>
+                        <path fill="currentColor" d="M10 15.172l9.192-9.193 1.415 1.414L10 18l-6.364-6.364 1.414-1.414z">
+                        </path>
+                      </svg>
+                    </span>
+                    <span><strong>Expert commentary and analysis</strong></span>
+  
+                  </li>
+                </ul>
+                <div class="action">
+                  <a class="button" href="https://blogger.keynate.com/discover-the-timeless-luxury-of-rollsroyce-the-ultimate-bespoke-driving-experience" target="_blank">
+                    See Demo
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         <!-- Software Engineer -->
         <div class="col-12 col-xl-3 col-lg-4 col-md-6 p-2">
@@ -545,7 +550,7 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/synchronous-microservices-with-spring-boot" target="_blank">
                   See Demo
                 </a>
               </div>
@@ -604,7 +609,7 @@
                 </li>
               </ul>
               <div class="action">
-                <a class="button" href="#">
+                <a class="button" href="https://blogger.keynate.com/the-allure-of-luxury-wine-an-experience-beyond-the-bottle" target="_blank">
                   See Demo
                 </a>
               </div>
@@ -625,14 +630,21 @@
   <div
     style=" margin-top: 25px; flex-direction: column; display: flex; justify-content: center; align-items: center; text-align: center;">
 
-    <h2 class="highlighted-text-shadow seo">
-      SEO
-    </h2>
+    <div>
+      <h2>
+        <img src="./assets/seo_icon.png" alt="" class="google_new_head" srcset=""
+        style="width: auto; height: auto; width: 220px;">
+      </h2>
+    </div>
+
     <div
-      style="min-height: 10px; margin-top: 10px; width: 50%; background-image: linear-gradient(to right, #434343 0%, black 100%); border-radius: 8px">
+      style="min-height: 10px; margin-top: 10px; width: 50%; background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%); border-radius: 8px">
 
     </div>
+
   </div>
+
+  
 
   <div style="overflow: hidden;">
     <div class="grid p-3">
@@ -1091,11 +1103,11 @@
 
   <a class="navbar-brand"
     href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer.">
-    <nav class="navbar fixed-bottom" style="background-color: #25D366;">
-      <div style="display: flex; justify-content: center; align-items: center; text-align: center; width: 100%;">
-        <h4>Order Now</h4> <i class="fa-solid fa-arrow-right" style="margin-left: 5px;"></i>
-      </div>
-    </nav>
+    <div style="display: flex; justify-content: center; align-items: center; width: 100%; position: relative;">
+        <div style="background-color: #188f00; width: 90%; position: fixed; bottom: 8px; border-radius: 44px; display: flex; justify-content: center; align-items: center; text-align: center; height: 60px;">
+          <h4 style="color: white;">Order Now</h4> <i class="fa-solid fa-arrow-right" style="margin-left: 5px; color: white;"></i>
+        </div>
+    </div>
   </a>
 
 
