--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="carousel-item">
-        <a href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer."
+        <a href="https://wa.me/918051902909?text=Hello%2C%20Keynate%21%20I%20just%20saw%20your%20amazing%20blog%20website%20development%2C%20and%20I%27m%20super%20excited%20to%20place%20an%20order%20for%20myself!%20Let%27s%20get%20started%21""
           target="_blank" rel="noopener noreferrer">
           <img src="assets/carousel3.png" class="d-block w-100" alt="...">
         </a>
@@ -131,7 +131,7 @@
         
 
         <div style="flex-direction: row; margin-top: 10px;">
-          <a href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer." class="button" style=" text-decoration: none; background-color: #188f00; color: white; padding: 10px; padding-left: 20px; padding-right: 20px; border-radius: 24px;">
+          <a target="_blank" href="https://wa.me/918051902909?text=Hello%2C%20Keynate%21%20I%20just%20saw%20your%20amazing%20blog%20website%20development%2C%20and%20I%27m%20super%20excited%20to%20place%20an%20order%20for%20myself!%20Let%27s%20get%20started%21" class="button" style=" text-decoration: none; background-color: #188f00; color: white; padding: 10px; padding-left: 20px; padding-right: 20px; border-radius: 24px;">
             Order Now
           </a>
           <a href="https://blogger.keynate.com/" target="_blank" class="button" style="margin-left: 10px; text-decoration: none; background-color: #3F3F3F; color: white; padding: 10px; padding-left: 20px; padding-right: 20px; border-radius: 24px;">
@@ -1101,8 +1101,8 @@
 
   </div>
 
-  <a class="navbar-brand"
-    href="https://wa.me/918051902909?text=Hello%20Keynate,%20I%20want%20more%20details%20about%20the%20blog%20website%20and%20app%20offer.">
+  <a class="navbar-brand" target="_blank"
+    href="https://wa.me/918051902909?text=Hello%2C%20Keynate%21%20I%20just%20saw%20your%20amazing%20blog%20website%20development%2C%20and%20I%27m%20super%20excited%20to%20place%20an%20order%20for%20myself!%20Let%27s%20get%20started%21">
     <div style="display: flex; justify-content: center; align-items: center; width: 100%; position: relative;">
         <div style="background-color: #188f00; width: 90%; position: fixed; bottom: 8px; border-radius: 44px; display: flex; justify-content: center; align-items: center; text-align: center; height: 60px;">
           <h4 style="color: white;">Order Now</h4> <i class="fa-solid fa-arrow-right" style="margin-left: 5px; color: white;"></i>
