--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
               type="button" role="tab" aria-controls="pills-profile" aria-selected="false"><i
                 class="fa-brands fa-apple"></i> Apple</button>
           </li>
-          <li class="nav-item" role="presentation">
+          <li style="margin-right: 5rem;" class="nav-item" role="presentation">
             <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
               type="button" role="tab" aria-controls="pills-contact" aria-selected="false"><i
                 class="fa-brands fa-windows"></i> Windows</button>
