--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
         </p>
         <h2 style="display: flex; flex-direction: column;">
           <div style="position: relative; display: inline-block;">
-            <span style="color: #188f00; position: relative; top: -10px; font-size: smaller;">$</span>
-            <span style="color: #188f00; font-size: larger;">350</span>
+            <span style="color: #188f00; position: relative; top: -10px; font-size: smaller;">₹</span>
+            <span style="color: #188f00; font-size: larger;">7,999</span>
           </div>
           <div>
             <strike style="color: rgb(59, 59, 59);">
-              <span style="color: rgb(59, 59, 59);">$1,500</span>
+              <span style="color: rgb(59, 59, 59);">₹25,000</span>
             </strike>
           </div>
         </h2>
