--- a/index.html
+++ b/index.html
@@ -1242,7 +1242,7 @@
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
-                  <i class="fa-solid fa-star" style="color: #b0b0b0;"></i>
+                  <i class="fa-solid fa-star-half-stroke" style="color: #FDCC0D;"></i>
               </div>
               <div class="user_logo" style="text-align: center;">
                 <img
@@ -1366,7 +1366,7 @@
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
                   <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
-                  <i class="fa-solid fa-star" style="color: #FDCC0D;"></i>
+                  <i class="fa-solid fa-star-half-stroke" style="color: #FDCC0D;"></i>
               </div>
               <div class="user_logo" style="text-align: center;">
                 <img
