--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <meta property="og:image" content="https://keynategit.github.io/live_show_blog_website_demo_feature/assets/keynate_blog_meta.png">
+    <meta property="image" content="https://keynategit.github.io/live_show_blog_website_demo_feature/assets/keynate_blog_meta.png">
+
 
   <link rel="stylesheet" href="index.css">
   <script src="index.js"></script>
