--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keynate - Instagram ads</title>
+  <title>
+    Keynate - Blog Website Development
+  </title>
+  <meta name="description"
+    content="Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration">
   <meta property="image" content="https://www.keynate.com/assets/logo/small.png">
   <link rel="shortcut icon" href="https://www.keynate.com/favicon.ico" type="image/x-icon">
   <link rel="icon" href="https://www.keynate.com/assets/logo/meta/Keynate_meta_32.png" sizes="32x32">
