--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   </title>
   <meta name="description"
     content="Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration">
+
+    <!-- twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@KeynateCompany">
+    <meta name="twitter:creator" content="@KeynateCompany">
+    <meta name="twitter:title" content="Keynate - Blog Website Development">
+    <meta name="twitter:description"
+      content="Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration">
+    <meta name="twitter:image" content="https://keynategit.github.io/live_show_blog_website_demo_feature/assets/keynate_blog_meta.png">
+
   <meta property="image" content="https://www.keynate.com/assets/logo/small.png">
   <link rel="shortcut icon" href="https://www.keynate.com/favicon.ico" type="image/x-icon">
   <link rel="icon" href="https://www.keynate.com/assets/logo/meta/Keynate_meta_32.png" sizes="32x32">
