--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       content="Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration">
     <meta name="twitter:image" content="https://keynategit.github.io/live_show_blog_website_demo_feature/assets/keynate_blog_meta.png">
 
+    <!-- canonical -->
+    <link rel="canonical" href="https://keynategit.github.io/live_show_blog_website_demo_feature/">
+
   <meta property="image" content="https://www.keynate.com/assets/logo/small.png">
   <link rel="shortcut icon" href="https://www.keynate.com/favicon.ico" type="image/x-icon">
   <link rel="icon" href="https://www.keynate.com/assets/logo/meta/Keynate_meta_32.png" sizes="32x32">
