--- a/index.html
+++ b/index.html
@@ -99,12 +99,21 @@
         <div class="col-12 col-xl-6 col-lg-6 col-md-6 p-2"
           style="display: flex; justify-content: center; align-items: center; text-align: center; flex-direction: column;">
 
+          
+
           <h2 class="order_title mb-0">
             Blog Website Development
           </h2>
           <p style="width: 80%; color: rgb(92, 92, 92);">
             Comprehensive Blog Solutions for Growth: SEO-Optimized, Engaging, and Ready for Google News Integration
           </p>
+         
+          <div style="flex-direction: row; display: flex;   justify-content: center;">
+            <div>
+              <img src="./assets/diwali.png" style="width: 35%; height: auto;" alt="" srcset="">
+            </div>
+          </div>
+
           <h2 style="display: flex; flex-direction: column;">
             <div style="position: relative; display: inline-block;">
               <span style="color: #188f00; position: relative; top: -10px; font-size: smaller;">₹</span>
