--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     style="  flex-direction: column; display: flex; justify-content: center; align-items: center; text-align: center;">
 
     <h2 style="color: #4133B7;">
-      Find Your Blogging Path with Custom Features for Every Creator
+      Find Your Niche with Custom Features for Every Creator
     </h2>
     <div
       style="min-height: 10px; width: 50%; background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 8px">
